--- a/cabal.config
+++ b/cabal.config
@@ -1,4 +1,8 @@
-constraints: array ==0.5.0.0,
+constraints: Cabal ==1.18.1.3,
+             QuickCheck ==2.6,
+             aeson ==0.7.0.6,
+             array ==0.5.0.0,
+             attoparsec ==0.11.3.4,
              base ==4.7.0.1,
              bifunctors ==4.2,
              bytestring ==0.10.4.0,
@@ -6,8 +10,11 @@ constraints: array ==0.5.0.0,
              containers ==0.5.5.1,
              contravariant ==1.2,
              deepseq ==1.3.0.2,
+             directory ==1.2.1.0,
              distributive ==0.4.4,
+             dlist ==0.7.1,
              exceptions ==0.6.1,
+             filemanip ==0.3.6.2,
              filepath ==1.3.0.2,
              free ==4.9,
              ghc-prim ==0.3.1.0,
@@ -16,22 +23,31 @@ constraints: array ==0.5.0.0,
              lens ==4.6,
              mtl ==2.2.1,
              nats ==0.2,
+             old-locale ==1.0.0.6,
              parallel ==3.2.0.4,
+             pathtype ==0.5.4,
              prelude-extras ==0.4,
              pretty ==1.1.1.1,
              primitive ==0.5.2.1,
+             process ==1.2.0.0,
              profunctors ==4.3.2,
+             random ==1.0.1.1,
              reflection ==1.5.1,
              rts ==1.0,
+             scientific ==0.3.3.2,
              semigroupoids ==4.2,
              semigroups ==0.15.4,
              split ==0.2.2,
              srclib-haskell ==0.1.0.0,
+             syb ==0.4.1,
              tagged ==0.7.3,
              template-haskell ==2.9.0.0,
              text ==1.1.0.0,
+             time ==1.4.2,
              transformers ==0.4.2.0,
              transformers-compat ==0.3.3.4,
+             unix ==2.7.0.1,
+             unix-compat ==0.4.1.3,
              unordered-containers ==0.2.4.0,
              vector ==0.10.9.1,
              void ==0.6.1
