--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -14,6 +14,7 @@ cabal-version:       >=1.10
 executable srclib-haskell
   main-is:             Main.hs
   ghc-options:         -Wall -O2
-  build-depends:       base >=4.7 && <4.8, text, lens
+  build-depends:       base >=4.7 && <4.8, lens, text, bytestring, aeson,
+                       directory==1.2.1.0, pathtype, filemanip, Cabal
   hs-source-dirs:      src
   default-language:    Haskell2010
