--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -15,6 +15,7 @@ executable srclib-haskell
   main-is:             Main.hs
   ghc-options:         -Wall -O2
   build-depends:       base >=4.7 && <4.8, lens, text, bytestring, aeson,
-                       directory==1.2.1.0, pathtype, filemanip, Cabal
+                       directory==1.2.1.0, pathtype, filemanip, Cabal,
+                       QuickCheck
   hs-source-dirs:      src
   default-language:    Haskell2010
