Got something working for the graph step.
This has the following limitations:

	- Dependencies are not supported unless they are already installed.
	- Multiple modules are not supported.
	- Only definitions that are exported from the module are graphed. No
	  refs or symbol documentation are graphed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-dist
-cabal-dev
-*.o
-*.hi
+*.aux
 *.chi
 *.chs.h
-.virtualenv
+*.hi
+*.hp
+*.o
+*.prof
+.cabal-sandbox/
 .hpc
 .hsenv
-.cabal-sandbox/
+.virtualenv
+cabal-dev
+cabal.config
 cabal.sandbox.config
-*.prof
-*.hp
-*.aux
+dist
 testdata/actual
