Don't store the cabal sandbox or the cabal build directory in the working directory.

--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -31,4 +31,5 @@ executable srclib-haskell
                        split,
                        process,
                        ghc,
-                       srclib-haddock-api
+                       srclib-haddock-api,
+                       shelly
