Don't output duplicate dependencies, source files, or source directories.

--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -32,4 +32,5 @@ executable srclib-haskell
                        process,
                        ghc,
                        srclib-haddock-api,
-                       shelly
+                       shelly,
+                       containers
