--- a/srclib-haddock/srclib-haddock-api/srclib-haddock-api.cabal
+++ b/srclib-haddock/srclib-haddock-api/srclib-haddock-api.cabal
@@ -46,7 +46,8 @@ library
     , xhtml >= 3000.2 && < 3000.3
     , Cabal >= 1.10
     , ghc >= 7.8.2 && < 7.8.4
-
+    , syb
+    , ghc-syb-utils
     , ghc-paths
     , srclib-haddock-library == 1.1.1.*
 
