--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = haddock
 	url = git@github.com:sourcegraph/haddock.git
 	branch = symbol-graph
+[submodule "testdata/case/haskell-simple-tests"]
+	path = testdata/case/haskell-simple-tests
+	url = git@github.com:sgtest/haskell-simple-tests
