Got repo/version info for dependencies!
Some dependencies are output multiple times. I need to look into this.

--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -17,25 +17,26 @@ executable srclib-haskell
   ghc-options:         -Wall -O0
   hs-source-dirs:      src
   default-language:    Haskell2010
-  build-depends:       base>=4.7 && <4.8
-               ,       text
-               ,       bytestring
-               ,       aeson
-               ,       directory
-               ,       pathtype
-               ,       filemanip
-               ,       Cabal
-               ,       QuickCheck
-               ,       mtl
-               ,       haskell-src-exts
-               ,       split
-               ,       process
-               ,       ghc
-               ,       shelly
-               ,       containers
-               ,       unix
-               ,       derive
+  build-depends:       aeson
+               ,       base>=4.7 && <4.8
                ,       base-unicode-symbols
-               ,       haddock
+               ,       bytestring
+               ,       Cabal
                ,       classy-prelude
+               ,       containers
+               ,       derive
+               ,       directory
+               ,       filemanip
+               ,       ghc
+               ,       hackage-db
+               ,       haddock
+               ,       haskell-src-exts
+               ,       mtl
+               ,       pathtype
+               ,       process
+               ,       QuickCheck
+               ,       shelly
+               ,       split
                ,       system-filepath
+               ,       text
+               ,       unix
