Graph modules and module imports.

--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -40,3 +40,4 @@ executable srclib-haskell
                ,       system-filepath
                ,       text
                ,       unix
+               ,       haskell-src-exts
