Sometimes the GHC api give back package names append with version-numbers-0.1.0.0.

--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -34,6 +34,7 @@ executable srclib-haskell
                ,       pathtype
                ,       process
                ,       QuickCheck
+               ,       regex-tdfa
                ,       shelly
                ,       split
                ,       system-filepath
