cleanup: Template-haskell heredocs instead of unlines.

--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -30,7 +30,6 @@ executable srclib-haskell
                ,       hackage-db
                ,       haddock
                ,       haskell-src-exts
-               ,       haskell-src-exts
                ,       mtl
                ,       pathtype
                ,       process
@@ -41,3 +40,4 @@ executable srclib-haskell
                ,       system-filepath
                ,       text
                ,       unix
+               ,       here
