--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -15,6 +15,7 @@ cabal-version:       >=1.10
 executable srclib-haskell
   main-is:             Main.hs
   hs-source-dirs:      src
+  ghc-options:         -O2
   default-language:    Haskell2010
   build-depends:       aeson
                ,       base>=4.7 && <4.8
@@ -23,6 +24,7 @@ executable srclib-haskell
                ,       Cabal
                ,       classy-prelude
                ,       containers
+               ,       deepseq
                ,       derive
                ,       directory
                ,       filemanip
