--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -15,19 +15,23 @@ cabal-version:       >=1.10
 executable srclib-haskell
   main-is:             Main.hs
   hs-source-dirs:      src
-  ghc-options:         -O2
+  ghc-options:         -O0
   default-language:    Haskell2010
   build-depends:       aeson
                ,       base>=4.7 && <4.8
                ,       base-unicode-symbols
+               ,       basic-prelude
                ,       bytestring
                ,       Cabal
                ,       classy-prelude
                ,       containers
+               ,       cpphs
                ,       deepseq
                ,       derive
                ,       directory
+               ,       file-embed
                ,       filemanip
+               ,       foldl
                ,       ghc
                ,       hackage-db
                ,       haskell-src-exts
@@ -40,6 +44,8 @@ executable srclib-haskell
                ,       shelly
                ,       split
                ,       system-filepath
+               ,       temporary
                ,       text
+               ,       turtle
                ,       unix
                ,       vector
