Use the published version of preprocess-haskell!

--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -49,3 +49,4 @@ executable srclib-haskell
                ,       turtle
                ,       unix
                ,       vector
+               ,       preprocess-haskell
