We can now perform name resolution on `warpdeps`!
So far, I've only confirmed that name resolution will run against
`warpdeps` without throwing exception and has a lot of output. There are
probablably still problems with the output that will need to be resolved.

--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -34,10 +34,13 @@ executable srclib-haskell
                ,       foldl
                ,       ghc
                ,       hackage-db
+               ,       haskell-names
+               ,       haskell-packages
                ,       haskell-src-exts==1.16.0.1
                ,       here
                ,       mtl
                ,       pathtype
+               ,       preprocess-haskell
                ,       process
                ,       QuickCheck
                ,       regex-tdfa
@@ -49,4 +52,3 @@ executable srclib-haskell
                ,       turtle
                ,       unix
                ,       vector
-               ,       preprocess-haskell
