Fully resolve all names.
I decided to keep the same path structure for all refs.

Specifically, all refs now contain information about where the def is
defined. I no longer make a distinction between local refs (which need
location information for disambiguation) and global refs (which don't
need any location information).

This change makes srclib-haskell refs break if they are linked against
a different version of a dependency than they were graphed against.

--- a/srclib-haskell.cabal
+++ b/srclib-haskell.cabal
@@ -21,6 +21,7 @@ executable srclib-haskell
                ,       base>=4.7 && <4.8
                ,       base-unicode-symbols
                ,       basic-prelude
+               ,       bimap
                ,       bytestring
                ,       Cabal
                ,       classy-prelude
@@ -55,3 +56,5 @@ executable srclib-haskell
                ,       turtle
                ,       unix
                ,       vector
+               ,       deepseq
+               ,       deepseq-generics
